<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            style="@style/matchmatch"
            android:fillViewport="true">
            <LinearLayout
                style="@style/matchmatch"
                android:orientation="vertical"
                android:background="@color/black">

                <include
                    android:id="@+id/toolbar"
                    style="@style/matchwrap"
                    layout="@layout/layout_toolbar"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    style="@style/matchwrap"
                    android:textColor="@color/white"
                    android:hint="@string/name"
                    android:singleLine="true"
                    android:inputType="textShortMessage"
                    android:textSize="@dimen/text_size_sixteen"
                    android:textCursorDrawable = "@color/white"
                    android:layout_marginTop="@dimen/margin_fifteen"
                    android:layout_marginStart="@dimen/margin_ten"
                    android:layout_marginEnd="@dimen/margin_ten"
                    android:textColorHint="@color/white"
                    android:padding="@dimen/margin_ten"
                    android:background="@drawable/bg_dark_gray"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    style="@style/matchwrap"
                    android:textColor="@color/white"
                    android:hint="@string/email"
                    android:singleLine="true"
                    android:inputType="textShortMessage"
                    android:textSize="@dimen/text_size_sixteen"
                    android:textCursorDrawable = "@color/white"
                    android:layout_marginTop="@dimen/margin_fifteen"
                    android:layout_marginStart="@dimen/margin_ten"
                    android:layout_marginEnd="@dimen/margin_ten"
                    android:textColorHint="@color/white"
                    android:padding="@dimen/margin_ten"
                    android:background="@drawable/bg_dark_gray"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobile"
                    style="@style/matchwrap"
                    android:textColor="@color/white"
                    android:hint="@string/mobile"
                    android:singleLine="true"
                    android:inputType="number"
                    android:textSize="@dimen/text_size_sixteen"
                    android:textCursorDrawable = "@color/white"
                    android:layout_marginTop="@dimen/margin_fifteen"
                    android:layout_marginStart="@dimen/margin_ten"
                    android:layout_marginEnd="@dimen/margin_ten"
                    android:textColorHint="@color/white"
                    android:padding="@dimen/margin_ten"
                    android:background="@drawable/bg_dark_gray"/>

                <TextView
                    style="@style/matchwrap"
                    android:textSize="@dimen/text_size_sixteen"
                    android:textColor="@color/white"
                    android:text="@string/select_concern"
                    android:layout_marginTop="@dimen/margin_fifteen"
                    android:layout_marginStart="@dimen/margin_ten"
                    android:layout_marginEnd="@dimen/margin_ten"
                    android:padding="@dimen/margin_ten"
                    android:background="@drawable/bg_dark_gray"
                    android:visibility="gone"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/message"
                    style="@style/matchwrap"
                    android:textColor="@color/white"
                    android:hint="@string/your_message"
                    android:singleLine="true"
                    android:inputType="textShortMessage"
                    android:textSize="@dimen/text_size_sixteen"
                    android:textCursorDrawable = "@color/white"
                    android:layout_marginTop="@dimen/margin_fifteen"
                    android:layout_marginStart="@dimen/margin_ten"
                    android:layout_marginEnd="@dimen/margin_ten"
                    android:textColorHint="@color/white"
                    android:padding="@dimen/margin_ten"
                    android:background="@drawable/bg_dark_gray"
                    android:maxLines="6"
                    android:minHeight="90dp"
                    android:gravity="top"/>

                <Button
                    android:id="@+id/send"
                    style="@style/wrapwrap"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_fifteen"
                    android:text="@string/send"
                    android:background="@drawable/bg_yellow"
                    android:textColor="@color/black" />

            </LinearLayout>
        </ScrollView>
        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>




</layout>