<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        style="@style/matchwrap"
        android:background="@drawable/rounded_bg">
        <LinearLayout
            style="@style/matchwrap"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_twenty">


            <TextView
                android:id="@+id/nameText"
                style="@style/wrapwrap"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_fifteen"
                android:gravity="center"
                android:padding="2dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_sixteen"
                android:text="@string/are_you_sure_you_want_to_logout" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_twenty"
            style="@style/matchwrap"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin_ten"
                android:background="@color/light_gray"/>

            <LinearLayout
                style="@style/matchwrap"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/yes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/yes"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_sixteen" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_gray" />

                <Button
                    android:id="@+id/no"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/no"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_sixteen" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>