<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            style="@style/matchwrap"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/light_yellow"
            android:minHeight="250dp">


            <TextView
                style="@style/matchwrap"
                android:textSize="@dimen/text_size_sixteen"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/enter_one_time_password"
                android:layout_marginTop="@dimen/margin_ten"  />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/otp"
                style="@style/matchwrap"
                android:textColor="@color/fontColor"
                android:hint="@string/enter_four_digit_code"
                android:singleLine="true"
                android:inputType="phone"
                android:textSize="@dimen/text_size_sixteen"
                android:layout_marginTop="@dimen/margin_fifteen"
                android:layout_marginStart="@dimen/margin_ten"
                android:layout_marginEnd="@dimen/margin_ten"
                android:textColorHint="@color/fontColor"
                android:padding="@dimen/margin_ten"
                android:gravity="center"
                android:background="@drawable/bg_gray_edittext"/>


            <LinearLayout
                android:orientation="horizontal"
                style="@style/matchwrap"
                android:weightSum="2"
                android:layout_marginStart="@dimen/margin_twenty"
                android:layout_marginEnd="@dimen/margin_twenty"
                android:layout_marginTop="@dimen/margin_twenty"
                android:layout_marginBottom="@dimen/margin_fifteen">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/resend"
                        style="@style/wrapwrap"
                        android:text="@string/resend"
                        android:textSize="@dimen/text_size_sixteen"
                        android:padding="@dimen/margin_ten"
                        android:textColor="@color/black"
                        android:gravity="center_horizontal"
                        android:background="@drawable/bg_yellow"
                        android:minWidth="120dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/done"
                        style="@style/wrapwrap"
                        android:text="@string/done"
                        android:textSize="@dimen/text_size_sixteen"
                        android:padding="@dimen/margin_ten"
                        android:textColor="@color/black"
                        android:gravity="center_horizontal"
                        android:background="@drawable/bg_yellow"
                        android:minWidth="120dp"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>

</layout>